# xpmgr

./: .gitignore  CMakeLists.txt  ICON_LICENSE.txt  README.md  icon.rc  resource.h  test.txt  xpmgr.cpp  xpmgr.h  xpmgr.rc  xpmgr.sln  xpmgr.vcxproj  xpmgr.vcxproj.filters  xpmgr_lib.cpp
.github/workflows/: msbuild.yml  windows.yml
extras/icon_sources/: README.txt
